2012-03-23  Dave Michael  <dmichael@chromium.org>

        Relanding(r111754): HTMLPluginElement is not destroyed on reload or navigation if getNPObject is called
        https://bugs.webkit.org/show_bug.cgi?id=80428

Reviewed by Eric Seidel and Ryosuke Niwa.

        Test: plugins/netscape-dom-access-and-reload.html

        * Source/autotools/symbols.filter: Export a symbol for InspectorCounters::counterValue.

2012-03-23  Ryosuke Niwa  <rniwa@webkit.org>

        REGRESSION(r111754): plugins/reloadplugins-and-pages.html fails on all platforms
        https://bugs.webkit.org/show_bug.cgi?id=82035

        * Source/autotools/symbols.filter:

2012-03-22  Raphael Kubo da Costa  <rakuco@FreeBSD.org>

        [CMake] Unreviewed build fix after r111778.

        * Source/CMakeLists.txt: Build WTF/.

2012-03-22  Martin Robinson  <mrobinson@igalia.com>

        Fixed the GTK+ WTF/JavaScriptCore build after r111778.

        * GNUmakefile.am: Remove a couple unnecessary gnumake variables.

2012-03-22  Csaba Osztrogonác  <ossy@webkit.org>

        Actually move WTF files to their new home
        https://bugs.webkit.org/show_bug.cgi?id=81844

        [Qt] Unreviewed buildfix after r111778.

        * Source/api.pri:

2012-03-22  Ming Xie  <mxie@rim.com>

        OLD_COMPILE_FLAGS was set incorrectly in WebKitHelpers.cmake
        https://bugs.webkit.org/show_bug.cgi?id=81961

        Reviewed by Rob Buis.

        This fixes the regression introduced by r109292

        * Source/cmake/WebKitHelpers.cmake:

2012-03-22  Dave Michael  <dmichael@chromium.org>

        HTMLPluginElement is not destroyed on reload or navigation if getNPObject is called
        https://bugs.webkit.org/show_bug.cgi?id=80428

        Reviewed by Eric Seidel.

        Test: plugins/netscape-dom-access-and-reload.html

        * Source/autotools/symbols.filter: Export a symbol for InspectorCounters::counterValue.

2012-03-22  Kevin Ollivier  <kevino@theolliviers.com>
