@@ -34,8 +34,8 @@ def build(bld):
     import Options
 
     jscore_excludes = ['jsc.cpp', 'ExecutableAllocatorPosix.cpp', 'LLIntOffsetsExtractor.cpp']
-    jscore_excludes.extend(get_excludes(jscore_dir, ['*CF.cpp', '*Symbian.cpp']))
-    jscore_excludes.extend(get_excludes(jscore_dir, ['*None.cpp']))
+    jscore_exclude_patterns = get_port_excludes(Options.options.port)
+    jscore_exclude_patterns.append('*None.cpp')
 
     sources = []
 
@@ -44,10 +44,17 @@ def build(bld):
             jscore_excludes += ['OSAllocatorPosix.cpp', 'ThreadingPthreads.cpp']
         else:
             jscore_excludes.append('JSStringRefBSTR.cpp')
-            jscore_excludes.extend(get_excludes(jscore_dir, ['*Win.cpp']))
+
+    if sys.platform.startswith('darwin'):
+        jscore_excludes.append('GCActivityCallback.cpp') # this is an empty impl.
 
     bld.env.LIBDIR = output_dir
     full_dirs = get_dirs_for_features(jscore_dir, features=[Options.options.port.lower()], dirs=jscore_dirs)
+    abs_dirs = []
+    for adir in full_dirs:
+        abs_dirs.append(os.path.join(jscore_dir, adir))
+
+    jscore_excludes.extend(get_excludes_in_dirs(abs_dirs, jscore_exclude_patterns))
 
     includes = common_includes + full_dirs
     if sys.platform.startswith('darwin'):
@@ -56,7 +63,7 @@ def build(bld):
     # 1. A simple program
     jscore = bld.new_task_gen(
         features = 'cc cxx cshlib',
-        includes = '. .. assembler ../WTF ../WTF/wtf ' + ' '.join(includes),
+        includes = '. .. assembler ../WTF ' + ' '.join(includes),
         source = sources,
         defines = ['BUILDING_JavaScriptCore'],
         target = 'jscore',
@@ -81,5 +88,3 @@ def build(bld):
         myenv.CXXFLAGS = myenv.CXXFLAGS[:]
         myenv.CXXFLAGS.remove('/EHsc')
         obj.env = myenv
-
-    bld.install_files(os.path.join(output_dir, 'JavaScriptCore'), 'API/*.h')
