@@ -1,3 +1,9 @@
+2012-03-24  Kevin Ollivier  <kevino@theolliviers.com>
+
+        [wx] Unreviewed. Fix the build after WTF move.
+
+        * wscript:
+
 2012-03-23  Filip Pizlo  <fpizlo@apple.com>
 
         DFG double voting may be overzealous in the case of variables that end up
